--- a/src/components/Info.css
+++ b/src/components/Info.css
@@ -6,6 +6,5 @@
     color: #222;
     width: 100%;
     text-align: left;
-    padding: 50px 500px 0 150px;
+    padding: 50px 250px 0 150px;
 }
-
