--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -4,21 +4,8 @@
 }
 
 .logo:hover{
-    animation: pulse 0.5s;
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(0.95);
-    }
-
-    70% {
-        transform: scale(1.5);
-    }
-
-    100% {
-        transform: scale(1);
-    }
+    transform: scale(1.5);
+    transition: transform 0.2s ease-in;
 }
 
 .navBar {
@@ -43,25 +30,22 @@
     width: 100%;
     height: 60px;
     bottom: -60px;
+}
 
+.speechBubble {
+    position: absolute;
+    top: 20px;
+    left: 45px;
+    background: white;
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+    max-width: 600px;
+    text-wrap: nowrap;
 }
 
 * {box-sizing: border-box;}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-}
-
-body.light, .navBar.light {
-  background-color: rgb(253, 247, 239);
-  transition: background 0.2s linear;
-}
-
-body.dark, .navBar.dark {
-  background-color: #1a1c20;
-  transition: background 0.2s linear;
-}
 
 .checkbox {
   opacity: 0;
