--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -8,20 +8,16 @@
     font-weight: 300;
     font-style: normal;
     color: #222;
-    width: 80%;
-    padding: 50px 0px 0px 500px;
+    width: 75%;
+    padding: 50px 0px 0px 250px;
     text-align: left;
-}
-
-.location, .bio, .socials {
-    padding-bottom: 5px;
 }
 
 .name {
     margin-top: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 0;
     font-family: "Playfair Display", serif;
-    font-size: 60px;
+    font-size: 55px;
     font-optical-sizing: auto;
     font-weight: 900;
     font-style: normal;
@@ -46,7 +42,7 @@
 }
 
 .bio {
-    width: 70%;
+    width: 100%;
 }
 
 .socials > ul {
